<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Hazirlik"
    tools:showIn="@layout/app_bar_hazirlik"
    android:background="@drawable/background">
    <RelativeLayout
        android:id="@+id/prgs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/siyah_transp_buton"
        android:gravity="center"
        android:elevation="20dp"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:elevation="30dp"
            android:visibility="gone"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/beyaz_kutucuk"
        android:padding="25dp"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal"
            android:text="@string/sinav_de"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:text="@string/bu_b_l_mde_kursumuz_taraf_ndan_haz_rlanan_test_ile_kendinizi_geli_tirebilirsiniz_de"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            android:text="@string/e_itime_ba_la_butonuna_t_klayarak_sizin_i_in_haz_rlad_m_z_testin_detaylar_n_g_rebilir_ve_soru_zmeye_ba_layabilirsiniz_de" />


    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/siyah_kutucuk"
        android:text="@string/egitime_basla_de"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eski_cozdugun_testleri_gozden_gecir_de"
        android:background="@drawable/siyah_kutucuk"
        android:textColor="#ffffff"
        android:layout_margin="25dp"/>

</LinearLayout>